# LLM_RAG_Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ferber_agent/: __init__.py  agent.py  faithful_prompts.py  result.py  retrieval.py  tools.py  usage.py
ferber_agent/data/: histology_lookup.json
scripts/: build_histology_lookup.py  build_vector_store.py  extract_prompts.py
tests/: conftest.py  test_backends.py  test_equivalence.py  test_faithful_pipeline.py  test_prompt_fidelity.py  test_retrieval.py  test_smoke.py  test_tools.py  test_web_search.py
