[project]
name = "ferber-agent"
version = "0.1.0"
description = "Modernized Ferber et al. autonomous tool+RAG oncology agent (frontier backbone)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.0",
    "chromadb>=0.5",
    "requests>=2.30",
    "tiktoken",
]

[project.optional-dependencies]
rerank = ["cohere>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ferber_agent"]
